WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177130
[css-grid] Small refactoring adding RenderGrid::contentAlignment()
https://bugs.webkit.org/show_bug.cgi?id=177130
Summary
[css-grid] Small refactoring adding RenderGrid::contentAlignment()
Manuel Rego Casasnovas
Reported
2017-09-19 03:43:43 PDT
[css-grid] Small refactoring adding RenderGrid::contentAlignment()
Attachments
Patch
(9.22 KB, patch)
2017-09-19 03:44 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Patch
(9.22 KB, patch)
2017-09-19 03:55 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Patch
(9.23 KB, patch)
2017-09-19 07:06 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
=Patch for landing
(9.19 KB, patch)
2017-09-25 00:55 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2017-09-19 03:44:38 PDT
Created
attachment 321194
[details]
Patch
Build Bot
Comment 2
2017-09-19 03:46:45 PDT
Attachment 321194
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderGrid.cpp:1586: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Manuel Rego Casasnovas
Comment 3
2017-09-19 03:55:21 PDT
Created
attachment 321195
[details]
Patch
Javier Fernandez
Comment 4
2017-09-19 05:29:31 PDT
Comment on
attachment 321195
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=321195&action=review
The change looks good to me.
> Source/WebCore/ChangeLog:10 > + that is from RenderGrid and GridTrackSizingAlgorithm.
I think there is something missing in this sentence; perhaps "accessible" ?
Manuel Rego Casasnovas
Comment 5
2017-09-19 06:18:30 PDT
Comment on
attachment 321195
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=321195&action=review
Thanks for the review, uploading new version fixing ChangeLog.
>> Source/WebCore/ChangeLog:10 >> + that is from RenderGrid and GridTrackSizingAlgorithm. > > I think there is something missing in this sentence; perhaps "accessible" ?
Actually I was thinking in "that is used from", but indeed I didn't write it.
Manuel Rego Casasnovas
Comment 6
2017-09-19 07:06:37 PDT
Created
attachment 321197
[details]
Patch
Sergio Villar Senin
Comment 7
2017-09-22 02:46:35 PDT
Comment on
attachment 321197
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=321197&action=review
> Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:1078 > + || (m_renderGrid->contentAlignment(m_direction).distribution() != ContentDistributionStretch))
Very nice. Do we still need resolvedJustifyContentPosition() and resolvedJustifyContentDistribution() ?
Javier Fernandez
Comment 8
2017-09-22 02:50:11 PDT
Comment on
attachment 321197
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=321197&action=review
>> Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:1078 >> + || (m_renderGrid->contentAlignment(m_direction).distribution() != ContentDistributionStretch)) > > Very nice. Do we still need resolvedJustifyContentPosition() and resolvedJustifyContentDistribution() ?
Perhaps not, but I think they are both useful functions when only needing specific content alignment values.
Manuel Rego Casasnovas
Comment 9
2017-09-25 00:33:32 PDT
(In reply to Sergio Villar Senin from
comment #7
)
> Comment on
attachment 321197
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=321197&action=review
> > > Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:1078 > > + || (m_renderGrid->contentAlignment(m_direction).distribution() != ContentDistributionStretch)) > > Very nice. Do we still need resolvedJustifyContentPosition() and > resolvedJustifyContentDistribution() ?
Some of these are still used by RenderFlexibleBox so I guess it's not an issue to keep them.
WebKit Commit Bot
Comment 10
2017-09-25 00:34:36 PDT
Comment on
attachment 321197
[details]
Patch Rejecting
attachment 321197
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 321197, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: 71. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp.rej patching file Source/WebCore/rendering/RenderGrid.cpp patching file Source/WebCore/rendering/RenderGrid.h patching file Source/WebCore/rendering/style/RenderStyle.cpp patching file Source/WebCore/rendering/style/RenderStyle.h Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Sergio Villar Senin']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.webkit.org/results/4647172
Manuel Rego Casasnovas
Comment 11
2017-09-25 00:55:44 PDT
Created
attachment 321673
[details]
=Patch for landing
WebKit Commit Bot
Comment 12
2017-09-25 01:39:52 PDT
Comment on
attachment 321673
[details]
=Patch for landing Clearing flags on attachment: 321673 Committed
r222441
: <
http://trac.webkit.org/changeset/222441
>
WebKit Commit Bot
Comment 13
2017-09-25 01:39:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 14
2017-09-27 12:29:55 PDT
<
rdar://problem/34693381
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug